samples/_failures_safe/1761511417_1d9028_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dfd250b1.c: In function ‘parser_consume’:
./samples/SAFE/__tmp_dfd250b1.c:167:5: error: expected expression at end of input
  167 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_dfd250b1.c:167:5: error: expected declaration or statement at end of input
